# bevy_wgsl_utils

./: Cargo.toml
assets/: show_hash.wgsl  show_noise.wgsl  show_simplex_noise.wgsl
examples/: show_hash.rs  show_noise.rs  show_simplex_noise.rs
src/: lib.rs  pcg_hash.wgsl  simplex_noise.wgsl
